--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,9 @@
 body {
     background-color: bisque;
 }
+#container {
+    display:flex ;
+}
 footer {
     background-color: black;
     color: white;
@@ -13,4 +16,11 @@ footer p{
     text-align: center;
     font-size: 0.6rem;
     margin-top: 0,5rem;
+}
+.cartao {
+    margin: 1rem 1rem;
+    background-color: aqua;
+    height: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% -6rem);
 }
